[package]
name = "healthcheck-v1"
version = "0.0.3"
authors = ["oktak"]
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
cron = "0.12.1"
chrono = "0.4"
futures = "0.3"
serde_json = "1.0.125"

[[bin]]
name = "hc"
path = "main.rs"
